--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2003-02-02  Martin Baulig  <martin@ximian.com>
 
+	* frontends/gui/SourceView.cs (CreateWidget): New abstract method.
+	(.ctor): Hook to the "map"/"unmap" events and don't update the
+	widget while we're invisible.
+	(frame_changed_event): If we're called the first time, queue an
+	idle callback which scrolls to the current line.
+
+2003-02-02  Martin Baulig  <martin@ximian.com>
+
 	* arch/ArchitectureI386.cs (I386Register): Made this public.
 
 2003-02-01  Martin Baulig  <martin@ximian.com>
