--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-02-02  Martin Baulig  <martin@ximian.com>
 
+	* interfaces/IMethod.cs (IsWrapper, WrapperAddress): New properties.
+
+2003-02-02  Martin Baulig  <martin@ximian.com>
+
 	* wrapper/icall.c: New file.
 	(Mono.Debugger.Tests.TestInternCall::Test): New interncall for
 	testing purposes.
