--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-02-02  Martin Baulig  <martin@ximian.com>
 
+	* backends/SingleSteppingEngine.cs: Added support for
+	PInvoke/icall wrappers.
+
+2003-02-02  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/IMethod.cs (IsWrapper, WrapperAddress): New properties.
 
 2003-02-02  Martin Baulig  <martin@ximian.com>
