February 2nd, 2003 - Martin Baulig ----------------------------------
When single-stepping into an interncall, don't stop in the wrapper.

January 25th, 2003 - Martin Baulig
----------------------------------

The Mono runtime now executes all managed code in a separate thread; rewrote the
Debugger's thread manager to make this work again.

You can now save a debugger session with all your breakpoints to disk and load it
back at a later time.

January 19th, 2003 - Martin Baulig
----------------------------------

Released version 0.2.0 "Boston" of the Mono Debugger :-)

January 17th, 2003 - Martin Baulig
----------------------------------

We have a new thread manager in mono/io-layer which is now used when debugging managed
applications.  This thread manager is portable and works on all flavors of Unix.

January 14th, 2003 - Martin Baulig
----------------------------------

The Debugger is now working on FreeBSD 4.7.

It wasn't actually that much work to port it, just cleaning up the APIs a bit and then a
few adjustments - a simple one afternoon job.

You can debug native applications or read core files; managed applications and
multi-threaded apps don't work yet.

January 5th, 2003 - Martin Baulig
---------------------------------

Added a note to RELEASE-NOTES-0.1.0.txt about the release which never really happened.

After an almost complete rewrite of the SingleSteppingEngine to support debugging
multi-threaded applications, the debugger is now getting more and more stable again.

Today, the debugger is entering a feature freeze for the 0.2.0 release.  My main focus is
now fixing all the remaining bugs and stabilizing all the existing features to make the
debugger actually usable.

October 15th, 2002 - Martin Baulig
----------------------------------

I was a bit too lazy to write NEWS items the last two weeks.

Today is Tuesday, it's one hour past Midnight and on Saturday I'll be sitting in an air
plane to New York City to enjoy my holidays before university st

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+February 2nd, 2003 - Martin Baulig
+----------------------------------
+
+When single-stepping into an interncall, don't stop in the wrapper.
+
 January 25th, 2003 - Martin Baulig
 ----------------------------------
 
