--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-05  Martin Baulig  <martin@ximian.com>
+
+	* tests/SymbolFileReader.cs: New test.  This is a nice tool which
+	can dump the contents of a symbol file.
+
 2003-02-03  Martin Baulig  <martin@ximian.com>
 
 	* backends/server/library.c: Return the correct thread abort/restart
