--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-02-07  Martin Baulig  <martin@ximian.com>
+
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs: Reflect
+	latest symbol writer changes.
+
 2003-02-05  Martin Baulig  <martin@ximian.com>
 
 	* tests/SymbolFileReader.cs: New test.  This is a nice tool which
