--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-02-08  Martin Baulig  <martin@ximian.com>
+
+	* classes/ModuleData.cs (FindMethod): New abstract method.
+
+	* classes/Module.cs (FindMethod): Call ModuleData.FindMethod().
+
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs
+	(MonoModule.FindMethod): Provide a custom implementation for this.
+
 2003-02-07  Martin Baulig  <martin@ximian.com>
 
 	* backends/mono-csharp/MonoCSharpLanguageBackend.cs: Reflect
