--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-02-09  Martin Baulig  <martin@ximian.com>
+
+	* test/SymbolFileReader.cs: Moved to ../lib/.
+
+	* lib/SymbolFileReader.cs: Added this to the build.
+
 2003-02-08  Martin Baulig  <martin@ximian.com>
 
 	* wrapper/main.c: Create a special command thread which is always
