--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-02-13  Miguel de Icaza  <miguel@ximian.com>
+
+	* frontends/command-line/Main.cs: Make enter repeat the last command.
+
 2003-02-09  Martin Baulig  <martin@ximian.com>
 
 	* test/SymbolFileReader.cs: Moved to ../lib/.
