--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2003-02-22  Martin Baulig  <martin@ximian.com>
+
+	* interfaces/IMethod.cs (IMethodSource.MethodLookup): New method.
+
+	* backends/Debugger.cs (InsertBreakpoint): Removed the overloaded
+	versions which took a method name / file name; the method lookup
+	is now done by the client, we just take a SourceMethodInfo here.
+
+	* frontends/scripting/: Completely reworked the `break' commands.
+	Thread groups are now specified in `<', '>'.
+
 2003-02-13  Miguel de Icaza  <miguel@ximian.com>
 
 	* frontends/command-line/Main.cs: Make enter repeat the last command.
