--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-02-22  Martin Baulig  <martin@ximian.com>
 
+	* doc/user-manual.texi: Documented the new breakpoint code.
+
+2003-02-22  Martin Baulig  <martin@ximian.com>
+
 	* interfaces/IMethod.cs (IMethodSource.MethodLookup): New method.
 
 	* backends/Debugger.cs (InsertBreakpoint): Removed the overloaded
