--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-02-22  Martin Baulig  <martin@ximian.com>
 
+	* classes/SourceFileFactory.cs (SourceFile.ReadFile): Use
+	`Encoding.GetEncoding (28591)' as the default encoding.  I've no
+	idea why, but that's what MCS is doing in driver.cs and it's
+	fixing my bug.
+
+2003-02-22  Martin Baulig  <martin@ximian.com>
+
 	* doc/user-manual.texi: Documented the new breakpoint code.
 
 2003-02-22  Martin Baulig  <martin@ximian.com>
