--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-02-24  Martin Baulig  <martin@ximian.com>
+
+	* backends/Process.cs (Kill): Send the event and call Dispose ().
+
+	* backends/ThreadManager.cs (process_exited): Use Process.Kill()
+	to kill all processes.
+
+	* backends/mono-csharp/MonoCSharpLanguageBackend.cs: Unload the
+	modules when the target exits.
+
 2003-02-23  Martin Baulig  <martin@ximian.com>
 
 	Renamed `SourceLocation' to `SourceAddress'.
