--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-03-03  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Command.cs (StepCommand): Use a separate
+	class for the individual stepping commands.
+
+2003-03-03  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/ScriptingContext.cs
 	(FrameHandle, BacktraceHandle): New public classes.
 
