2003-03-03  Martin Baulig  <martin@ximian.com>
	* frontends/scripting/Expression.cs
	(ModuleOperationListExpression): New expression.

svn path=/trunk/debugger/; revision=12126

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 2003-03-03  Martin Baulig  <martin@ximian.com>
 
 	* frontends/scripting/Expression.cs
+	(ModuleOperationListExpression): New expression.
+
+2003-03-03  Martin Baulig  <martin@ximian.com>
+
+	* frontends/scripting/Expression.cs
 	(ModuleListExpression, SourceListExpression, ProcessListExpression):
 	New expressions.
 
