2003-03-03  Martin Baulig  <martin@ximian.com>
	* frontends/scripting/Parser.jay (command): Splitted into
	`generated_command', `other_command' and `assert_command' and
	removed the "help" command.

	* frontends/scripting/Expression.cs
	(ProgramArgumentsExpression): New expression.

svn path=/trunk/debugger/; revision=12129

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2003-03-03  Martin Baulig  <martin@ximian.com>
 
+	* frontends/scripting/Parser.jay (command): Splitted into
+	`generated_command', `other_command' and `assert_command' and
+	removed the "help" command.
+
+	* frontends/scripting/Expression.cs
+	(ProgramArgumentsExpression): New expression.
+
+2003-03-03  Martin Baulig  <martin@ximian.com>
+
 	* frontends/scripting/Expression.cs
 	(BreakpointNumberExpression): New expression.
 
