--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-03-04  Martin Baulig  <martin@ximian.com>
 
+	* configure.in: Improved the gtk# check; actually check for
+	gapi_codegen.exe and don't build the GUI if we can't find gtk#.
+
+2003-03-04  Martin Baulig  <martin@ximian.com>
+
 	* RELEASE-NOTES-0.2.1.txt: New file.  This is more or less a copy
 	of the RELEASE-NOTES-0.2.0.txt.
 
