2003-03-05  Martin Baulig  <martin@ximian.com>
	Released version 0.2.1 "Camebridge" of the Mono Debugger :-)

svn path=/trunk/debugger/; revision=12214

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-05  Martin Baulig  <martin@ximian.com>
+
+	Released version 0.2.1 "Camebridge" of the Mono Debugger :-)
+
 2003-03-04  Martin Baulig  <martin@ximian.com>
 
 	* widgets/generator/Makefile.am: Only rebuild things if we're in
