2003-03-05  Martin Baulig  <martin@ximian.com>
	Released version 0.2.1 "Camebridge" of the Mono Debugger :-)

svn path=/trunk/debugger/; revision=12216

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-03-05  Martin Baulig  <martin@ximian.com>
 
+	* configure.in: Set version number to 0.2.1.1.
+
+2003-03-05  Martin Baulig  <martin@ximian.com>
+
 	Released version 0.2.1 "Camebridge" of the Mono Debugger :-)
 
 2003-03-04  Martin Baulig  <martin@ximian.com>
