Oh my god, I was an idiot yesterday !
svn path=/trunk/debugger/; revision=12253

--- a/ChangeLog
+++ b/ChangeLog
@@ -14,7 +14,7 @@
 
 2003-03-05  Martin Baulig  <martin@ximian.com>
 
-	Released version 0.2.1 "Camebridge" of the Mono Debugger :-)
+	Released version 0.2.1 "Cambridge" of the Mono Debugger :-)
 
 2003-03-04  Martin Baulig  <martin@ximian.com>
 
