--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 March 4th, 2003 - Martin Baulig
 -------------------------------
 
-Released version 0.2.1 "Camebridge" of the Mono Debugger :-)
+Released version 0.2.1 "Cambridge" of the Mono Debugger :-)
 
 March 3th, 2003 - Martin Baulig
 -------------------------------
