--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-03-07  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Set version number to 0.2.2.
+
 2003-03-05  Martin Baulig  <martin@ximian.com>
 
 	* wrapper/wrapper.c: This file was formerly known as main.c.
